[package]
name = "terb"
description = "A blog generator on terminal"
readme = "README.md"
license = "GPL3"
version = "0.1.4"
edition = "2021"
authors = ["ity <ity@keemail.me>"]

[profile.release]
opt-level = "z"
debug = false
codegen-units = 1
lto = true

[dependencies]
liquid = "0.26.4"
pulldown-cmark = "0.9.3"
serde_json = "1.0.104"
toml = "0.7.6"
